Cambios en la importación de firebase, inicio de la función de createUser, hay error en el documento register.js

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 <body>
   <section id="root"></section>
   <script type="module" src="main.js"></script>
+  <script type="module" src="./lib/firebase.js"></script>
 </body>
 
 </html>
